2007-04-26 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robone-1.0/cgi-bin/status.cgi: FIxed another status corner case.
        
        * www/robonet-1.0/cgi-bin/performance.cgi: Completion statistics script
          which calculates how well we're doing.

2007-04-26 Eric Saunders <saunders@astro.ex.ac.uk>

	* bin/adaptive_vs_scheduler.pl, bin/virtual_telescope.pl, 
	  examples/adp_algorithm2.pl, examples/datetime_sandbox.pl, 
	  examples/telescope_sandbox.pl, eSTAR/VT/Handler.pm: Fixed hardcoded
	  user directories. 

2007-04-25 Alasdair Allan <aa@astro.ex.ac.uk>

        * eSTAR/UA/Handler: Fixed some bugs on user agent mail returns.

2007-04-24 Alasdair Allan <aa@astro.ex.ac.uk>

	* startup/adp_programme: Script to start the ADP programme
        
        * eSTAR/UA/Handler: Added more debugging into the user agent mails.
        
        * eSTAR/Config: Added name_from_node() method in to return the 
          human readable name of the SOAP node agent end point.

2007-04-24 Eric Saunders <saunders@astro.ex.ac.uk>

	* BRANCH MERGE: Merged changes from the ADP variable star branch
	  'saunders_vs_agent_branch2' back into trunk at the truck tag
          of 'AA_Main_Trunk_24APR07'.

2007-04-24 Alasdair Allan <aa@astro.ex.ac.uk>

	* widgets/eSTAR Status.wdgt/*: Fixed bug on UKIRT status, updated 
	  for new node agents and Eric's new ADP agent.
	
        * bin/test_servers.pl: Changed over to new node agents

        * www/estar/cgi-bin/status.pl: Changed over to new node agents

        * www/estar/cgi-bin/mobile.pl: Changed over to new node agents
     
	* demo/votech_garching07/: Added PLASTIC forwarded scripts
	
	* demo/ag_edinburgh06: Added Workbench RPC scripts
	        
2007-04-23 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/cgi-bin/*: Added support for different filters
          from the override page.

2007-04-23 Eric Saunders <saunders@astro.ex.ac.uk>

	* bin/virtual_telescope.pl: Fixed several race conditions, and did